--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,8 @@
 applications:
 - name: application-log-analysis
+  random-route: true
   memory: 256M
-  command: python cloud-logging.py
+  command: python manage.py runserver 0.0.0.0:$PORT
+  buildpack: https://github.com/cloudfoundry/python-buildpack
+  env: 
+    DISABLE_COLLECTSTATIC: 1
