updated to use pre-built container image

--- a/app-log-analysis.yaml
+++ b/app-log-analysis.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: app-log-analysis
-          image: $MYREGISTRY/$MYNAMESPACE/$MYIMAGE:latest
+          image: ibmcom/tutorial-application-log-analysis
 ---
 kind: Service
 apiVersion: v1
